--- a/src/Airbnb/scss/base/_globales.scss
+++ b/src/Airbnb/scss/base/_globales.scss
@@ -1,7 +1,5 @@
 @use 'variables' as v; 
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
-
 html {
     font-size: 62.5%;
     box-sizing: border-box;
@@ -24,26 +22,17 @@ p {
     max-width: 1200px;
     margin: 0 auto;
 }
-
-a {
-    text-decoration: none;
-}
-
 img {
     max-width: 100%;
     display: block;
 }
 
-h1, h2, h3 {
-    margin: 0 0 v.$separacion  0 ;
-}
-h1 {
-    font-size: 4rem;
-}
-h2 {
-    font-size: 3.6rem;
-}
-h3 {
-    font-size: 3.2rem;
+ul {
+    padding:0;
+    list-style: none;
+    margin: 0;
 }
 
+.seccion {
+    padding: 2rem 0;
+}
