--- a/src/Airbnb/scss/base/_tipografia.scss
+++ b/src/Airbnb/scss/base/_tipografia.scss
@@ -1,4 +1,4 @@
-@use 'base/variables' as v;
+// @use 'base/variables' as v;
 
 h1, h2, h3 {
     margin: 0;
@@ -15,4 +15,9 @@ h3 {
 }
 a {
     text-decoration: none;
+}
+
+// expresion regular de css para que tome todos los elementos que terminen con __heading 
+[class$="__heading"]{
+    margin: 2rem 0;
 }
