podcast fm finished

--- a/src/main-menu/mainMenu.scss
+++ b/src/main-menu/mainMenu.scss
@@ -8,4 +8,10 @@
         color: #000;
         text-decoration: none;
     }
+    a.ecommerce{
+        font-size: 2rem;
+        color: #000;
+        text-decoration: none;
+    }
 }
+
